<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright"
    tools:context=".userinterface.UserInterfaceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20sp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/basic_views"
            tools:ignore="VisualLintButtonSize" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/layouts"
            tools:ignore="VisualLintButtonSize" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/constraint_layout"
            tools:ignore="VisualLintButtonSize" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialogs"
            tools:ignore="VisualLintButtonSize" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sheets"
            tools:ignore="VisualLintButtonSize" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragments"
            tools:ignore="VisualLintButtonSize" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <Button
            android:id="@+id/btn_drawer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drawer"
            tools:ignore="VisualLintButtonSize" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <Button
            android:id="@+id/btn_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tabs"
            tools:ignore="VisualLintButtonSize" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <Button
            android:id="@+id/btn_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_view"
            tools:ignore="VisualLintButtonSize" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <Button
            android:id="@+id/btn_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spinner_view"
            tools:ignore="VisualLintButtonSize" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <Button
            android:id="@+id/btn_gridview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grid_view"
            tools:ignore="VisualLintButtonSize" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <Button
            android:id="@+id/btn_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recycler_view"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>

</ScrollView>